@@ -6,9 +6,10 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-x.x, xxxx-xx-xx
 ------------------------------
+#242377 by sun: Fixed sub-level menu items exceed total document height.
 
 
-Admin Menu 6.x-x.x, xxxx-xx-xx
+Admin Menu 6.x-1.0, 2008-06-26
 ------------------------------
 #266308 by sun: Fixed jQuery 1.0.x incompatible selector for collapsing modules.
 #268373 by sun: Added hook_update to cleanup for alpha/beta testers.
